Bug 2028523 - The Context chips are missaligned in the users prompt r=ai-frontend-reviewers,gcardieri
Also fix missed variable rename from Bug 2028519

Differential Revision: https://phabricator.services.mozilla.com/D291858

UltraBlame original commit: 443c9ffc46948d211a0bca451bcd9f0d67268dc1

--- a/browser/components/aiwindow/ui/components/ai-chat-content/ai-chat-content.css
+++ b/browser/components/aiwindow/ui/components/ai-chat-content/ai-chat-content.css
@@ -19,10 +19,21 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  margin-block-start: var(--space-xsmall);
   min-height: 0;
   overflow-y: auto;
   padding-block: var(--space-large);
   width: 100%;
+
+  &[overflowing] {
+    mask-image: linear-gradient(
+      to bottom,
+      transparent,
+      var(--color-black) var(--size-item-xlarge),
+      var(--color-black) calc(100% - var(--size-item-xlarge)),
+      transparent
+    );
+  }
 
   @media (prefers-reduced-motion: no-preference) {
     scroll-behavior: smooth;
@@ -63,6 +74,7 @@
   box-shadow:
     var(--smartwindow-shadow, var(--box-shadow-level-2)),
     inset 0 0 5px var(--chat-bubble-inset-color, var(--box-shadow-color-lighter-layer-1));
+  gap: var(--space-medium);
   max-width: 75%;
   overflow-wrap: anywhere;
   padding-inline: var(--space-large);
